--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,7 +107,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:id="@+id/checkBox" />
+                    android:id="@+id/checkBox"
+                    android:layout_marginBottom="50dp"
+                    />
 
                 <Button
                     android:id="@+id/email_sign_in_button"
@@ -116,6 +118,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/action_sign_in"
+
                     android:textStyle="bold"
                     android:textColor="#FFEAEAEA"
                     android:background="#FF353535"
