--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#A1C05A</item>
+        <item name="colorPrimary">#F15F5F</item>
         <item name="colorPrimaryDark">#353535</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
