--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
 
 
     <ListView
+        android:id="@+id/listview"
         android:layout_below="@id/edit_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
