--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@ x
         android:layout_marginLeft="17dp"
         android:layout_marginRight="17dp"
         android:layout_alignParentStart="true" />
+
     <ListView
        android:id="@+id/listview"
         android:layout_width="match_parent"
@@ -75,18 +76,9 @@ x
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_menu_manage" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_kakao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:fabSize="normal"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
+        android:layout_margin="20dp"
+        android:visibility="gone"
+        android:src="@drawable/ic_delete_black_24dp"
         />
 
     <android.support.design.widget.FloatingActionButton
@@ -94,11 +86,25 @@ x
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:fabSize="normal"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_margin="20dp"
+        android:visibility="gone"
+        android:src="@drawable/ic_record_voice_over_black_24dp"
+
         />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/plus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:fabSize="normal"
+        android:layout_margin="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/btn"
+        app:srcCompat="@drawable/smartphone"
+  />
 
 
 </RelativeLayout>
