--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,10 @@
     android:orientation="vertical"
     >
 x
-
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
     <Switch
         android:id="@+id/onoff"
         android:layout_width="wrap_content"
@@ -37,14 +40,12 @@ x
         android:id="@+id/edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dip"
         android:textSize="30sp"
         android:hint="@string/code_name"
-        android:layout_alignBaseline="@+id/btn"
-        android:layout_alignBottom="@+id/btn"
+        android:layout_alignTop="@id/btn"
+        android:layout_alignBottom="@id/btn"
         android:layout_alignParentStart="true"
-        android:layout_alignStart="@+id/btn"
-        android:layout_toLeftOf="@+id/btn"
+        android:layout_toLeftOf="@id/btn"
         android:layout_marginLeft="25dp"/>
 
 
@@ -105,6 +106,5 @@ x
         android:layout_alignEnd="@+id/btn"
         app:srcCompat="@drawable/smartphone"
   />
-
 
 </RelativeLayout>
