--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,12 +3,12 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     >
-
 
 
     <Button
@@ -19,9 +19,9 @@
         android:layout_marginTop="20dp"
         android:layout_alignParentRight="true"
         android:padding="15dip"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:text="Edit"
-        android:layout_marginRight="25dp"
+        android:layout_marginRight="20dp"
         />
 
     <EditText
@@ -34,7 +34,10 @@
         android:layout_alignBottom="@id/btn"
         android:layout_alignParentStart="true"
         android:layout_toLeftOf="@id/btn"
-        android:layout_marginLeft="25dp"/>
+        android:layout_marginLeft="20dp"
+
+
+        />
 
     <ToggleButton
         android:id="@+id/onoff"
@@ -53,10 +56,12 @@
         android:layout_height="wrap_content"
         android:padding="8dip"
         android:textSize="25sp"
-        android:text="Alarm Code Member"
+        android:text="      Alarm Code Member"
         android:layout_below="@+id/onoff"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="17dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="#FFEAEAEA"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentStart="true" />
 
     <ListView
